dynamic questions after grid

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </head>
 <body>
     <div class="survey-container">
-        <h1>My Comprehensive Survey</h1>
-        <div id="question-container">
+        <h1>Pulse Demo</h1>
+        <div id="question-container" class="question-container">
             <!-- Questions will be dynamically added here -->
         </div>
         <div id="progress">
