index.mjs as interface

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     </div>
 
     <!-- Include your main.js script -->
-    <script type="module" src="controller.js"></script>
+    <script type="module" src="index.mjs"></script>
 </body>
 </html>
