--- a/examples/index.html
+++ b/examples/index.html
@@ -22,8 +22,9 @@
     <div id="navigation">
       <button id="next-button">Next</button>
     </div>
+    <div id = 'finish'></div>
   </div>
-  <script type="module" src="scripts/loop-through-multi-select.js""></script>
+  <script type="module" src="studies/complex-survey.js"></script>
 </body>
 
 </html>
