--- a/examples/index.html
+++ b/examples/index.html
@@ -24,7 +24,7 @@
     </div>
     <div id = 'finish'></div>
   </div>
-  <script type="module" src="studies/complex-survey.js"></script>
+  <script type="module" src="studies/enterprise-market-research.js"></script>
 </body>
 
 </html>
